--- a/InstaStay/Areas/Admin/Views/Report/HotelRequestes.cshtml
+++ b/InstaStay/Areas/Admin/Views/Report/HotelRequestes.cshtml
@@ -2,8 +2,7 @@
 @{
     ViewData["Title"] = "Reports";
 }
-<h1 class="text-center">Hotel Requsts</h1>
-
+<h1 class="text-center">Hotel Requests</h1>
 <table class="table table-striped table-bordered text-center align-content-sm-center mx-3">
     <thead class="thead-dark">
         <tr>
@@ -27,15 +26,19 @@
                 </td>
                 <td>@Html.DisplayFor(modelItem => item.stars)</td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-success">
-                        <i class="fas fa-check"></i> Accept
-                    </a>
-                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">
-                        <i class="fas fa-trash"></i> Delete
-                    </a>
+                    <form asp-action="Accept" asp-controller="Dashboard" asp-area="Admin" asp-route-id="@item.Id" method="post" style="display:inline;">
+                        @Html.AntiForgeryToken()
+                        <button type="submit" class="btn btn-sm btn-success">
+                            <i class="fas fa-check"></i> Accept
+                        </button>
+                    </form>
+                    <form asp-action="Delete" asp-controller="Dashboard" asp-area="Admin" asp-route-id="@item.Id" method="post" style="display:inline;">
+                        <button type="submit" class="btn btn-sm btn-danger">
+                            <i class="fas fa-trash"></i> Delete
+                        </button>
+                    </form>
                 </td>
             </tr>
-
         }
     </tbody>
 </table>
