--- a/InstaStay/Areas/HotelManager/Views/ManageHotel/NewHotelRequest.cshtml
+++ b/InstaStay/Areas/HotelManager/Views/ManageHotel/NewHotelRequest.cshtml
@@ -1,11 +1,10 @@
 ﻿@model Models.Models.NewHotelRequests
-
+@using Microsoft.AspNetCore.Identity
+@inject UserManager<ApplicationUser> _userManager
 @{
     ViewData["Title"] = "New Hotel Request";
 }
-
 <h1 class="mb-4 text-info text-center">New Hotel Request</h1>
-
 <div class="row justify-content-center">
     <div class="col-lg-8">
         <div class="card shadow-sm border-0 p-4">
@@ -14,6 +13,9 @@
             </h4>
             <form asp-action="NewHotelRequest" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="alert alert-danger" style="display:none;"></div>
+                <div class="form-group mb-3">
+                    <input name="UserName" hidden class="form-control" value="@User.Identity.Name" placeholder="Enter hotel name" />
+                </div>
                 <!-- Hotel Name -->
                 <div class="form-group mb-3">
                     <label asp-for="Name" class="form-label"><i class="fas fa-building me-2 text-info"></i>Hotel Name</label>
@@ -78,7 +80,6 @@
                     imagePreview.src = e.target.result;
                     imagePreview.style.display = "block";
                 };
-
                 reader.readAsDataURL(input.files[0]);
             }
         }
